@@ -116,29 +116,29 @@ no 1, here is an example:
   # strings /proc/1/exe |grep Id
   &#36;Id: runit.c,v 1.7 2002/02/13 09:59:52 pape Exp &#36;
   # uptime
-   14:36:29 up 88 days,  1:51,  2 users,  load average: 0.20, 0.13, 0.04
+   08:53:39 up 178 days, 19:11,  1 user,  load average: 0.24, 0.12, 0.04
   # ps axuw |head -n20
   USER       PID %CPU %MEM   VSZ  RSS TTY      STAT START   TIME COMMAND
-  root         1  0.0  0.0    20   16 ?        S     2002   0:05 runit
+  root         1  0.0  0.0    20   16 ?        S     2002   0:06 runit
   root         2  0.0  0.0     0    0 ?        SW    2002   0:00 [keventd]
   root         3  0.0  0.0     0    0 ?        SWN   2002   0:00 [ksoftirqd_CPU0]
-  root         4  0.0  0.0     0    0 ?        SW    2002   0:16 [kswapd]
-  root         5  0.0  0.0     0    0 ?        SW    2002   0:00 [bdflush]
-  root         6  0.0  0.0     0    0 ?        SW    2002   0:01 [kupdated]
-  root       168  0.0  0.2  1652  584 ?        S     2002   0:00 /usr/sbin/cron
-  root       174  0.0  0.0    36   24 ?        S     2002   0:00 runsvdir /service log: ........................................................................................................
+  root         4  0.0  0.0     0    0 ?        SW    2002   1:29 [kswapd]
+  root         5  0.0  0.0     0    0 ?        SW    2002   0:02 [bdflush]
+  root         6  0.0  0.0     0    0 ?        SW    2002   0:10 [kupdated]
+  root       168  0.0  0.0  1652  216 ?        S     2002   0:00 /usr/sbin/cron
+  root       174  0.0  0.0    36   24 ?        S     2002   0:00 runsvdir /var/service log: ....................................................................................................
   root       176  0.0  0.0    20   20 ?        S     2002   0:00 runsv qmail-send
   root       177  0.0  0.0    20   20 ?        S     2002   0:00 runsv getty-5
   root       178  0.0  0.0    20   20 ?        S     2002   0:00 runsv getty-4
   root       179  0.0  0.0    20   20 ?        S     2002   0:00 runsv getty-3
   root       180  0.0  0.0    20   20 ?        S     2002   0:00 runsv getty-2
-  root       181  0.0  0.0    20   20 ?        S     2002   0:00 runsv qmail-smtpd
   root       182  0.0  0.0    20   20 ?        S     2002   0:00 runsv socklog-unix
-  root       183  0.0  0.1  1256  384 tty5     S     2002   0:00 getty 38400 tty5 linux
-  root       184  0.0  0.1  1256  384 tty3     S     2002   0:00 getty 38400 tty3 linux
+  root       183  0.0  0.0  1256   40 tty5     S     2002   0:00 getty 38400 tty5 linux
+  root       184  0.0  0.0  1256   40 tty3     S     2002   0:00 getty 38400 tty3 linux
   root       185  0.0  0.0    20   20 ?        S     2002   0:00 runsv socklog-klog
   root       186  0.0  0.0    20   20 ?        S     2002   0:00 runsv ssh
-# pstree
+  root       187  0.0  0.0  1256   40 tty4     S     2002   0:00 getty 38400 tty4 linux
+  # pstree
   runit-+-bdflush
         |-cron
         |-keventd
@@ -150,25 +150,24 @@ no 1, here is an example:
                    |                    |-qmail-lspawn
                    |                    `-qmail-rspawn
                    |-4*[runsv---getty]
-                   |-runsv-+-multilog
-                   |       `-tcpserver---qmail-smtpd
                    |-2*[runsv-+-multilog]
                    |          `-socklog]
                    |-runsv-+-multilog
-                   |       `-sshd-+-2*[sshd---sshd---tail]
-                   |              |-sshd---sshd---bash
+                   |       `-sshd-+-sshd---sshd
                    |              `-sshd---sshd---bash---bash---pstree
                    |-runsv---clockspeed
                    |-runsv-+-dnscache
                    |       `-multilog
-                   |-runsv---apache-ssl-+-20*[apache-ssl]
+                   |-runsv---apache-ssl-+-12*[apache-ssl]
                    |                    |-gcache
                    |                    `-4*[multilog]
                    |-6*[runsv-+-multilog]
                    |          `-tcpserver]
                    |-3*[runsv-+-multilog]
                    |          `-tinydns]
-                   `-runsv---uncat
+                   |-runsv---uncat
+                   `-2*[runsv-+-multilog]
+                              `-tcpsvd]
 </pre>
 This is from a more busy system:
 <pre>
@@ -195,7 +194,7 @@ smoothly escaping from <i>sysvinit</i>.
 <hr>
 If <i>runit</i> on linux is compiled and linked with
 <a href="http://www.fefe.de/dietlibc/">dietlibc</a> it yields in a statically
-linked <tt>runit</tt> binary of 9.7k size and this <tt>ps axuw</tt> output
+linked <tt>runit</tt> binary of 8.5k size and this <tt>ps axuw</tt> output
 on my system:
 <pre>
   USER       PID %CPU %MEM   VSZ  RSS TTY      STAT START   TIME COMMAND
