@@ -12,14 +12,15 @@
 <hr>
 This is a collection of <tt>run</tt> scripts for popular services to have
 them monitored by the
-<a href="http://cr.yp.to/daemontools.html">daemontools</a> package.
+<a href="http://cr.yp.to/daemontools.html">daemontools</a> or
+<a href="http://smarden.org/runit/">runit</a> package.
 If you have additional run scripts or one of these run scripts works for you on
 an operating system not stated here, please
 <a href="mailto:pape-runscripts@smarden.org">let me know</a>. 
 <p>
 Thanks go to the following people for contributing run scripts:
 Alessandro Bono, Robin S. Socha, Claus Alboege, Paul Jarc, clemens fischer,
-Jesse Cablek, Lukas Beeler, Thomas Baden, Ralf Hildebrandt.
+Jesse Cablek, Lukas Beeler, Thomas Baden, Ralf Hildebrandt, Antonio Dias.
 <hr>
 <a href="#apache">apache</a><br>
 <a href="#apache2">apache2</a><br>
@@ -32,6 +33,7 @@ Jesse Cablek, Lukas Beeler, Thomas Baden, Ralf Hildebrandt.
 <a href="#dhcpcd">dhcpcd</a><br>
 <a href="#dhcpd">dhcpd</a><br>
 <a href="#expireproctitle">expireproctitle</a><br>
+<a href="#fam">fam</a><br>
 <a href="#gdm">gdm</a><br>
 <a href="#getty">getty</a><br>
 <a href="#identd">identd</a><br>
@@ -47,6 +49,7 @@ logging console messages</a><br>
 <a href="#ppp">ppp</a><br>
 <a href="#proftpd">proftpd</a><br>
 <a href="#pure-ftpd">pure-ftpd</a><br>
+<a href="#radiusd">radiusd</a><br>
 <a href="#rsyncd">rsyncd</a><br>
 <a href="#samba">samba (smbd, nmbd)</a><br>
 <a href="#squid">squid</a><br>
@@ -56,6 +59,7 @@ logging console messages</a><br>
 <a href="#stunnel">stunnel</a><br>
 <a href="#taiclockd">taiclockd</a><br>
 <a href="#tomcat">tomcat</a><br>
+<a href="#wvdial">wvdial</a><br>
 <a href="#xdm">xdm</a><br>
 <hr>
 
@@ -201,6 +205,17 @@ to be set up.
  exec sleep 300
 </pre>
 <hr>
+<h3><a name="fam">A <tt>fam</tt> run script</a></h3>
+(<i>Slackware Linux 9.0</i>)
+<pre>
+ #!/bin/sh
+ exec 2>&1
+ exec /usr/bin/fam -L -f -v
+</pre>
+This service needs a
+<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+to be set up.
+<hr>
 <h3><a name="gdm">A <tt>gdm</tt> run script</a></h3>
 <i>(Debian woody)</i>
 <pre>
@@ -217,6 +232,13 @@ to be set up.
 The <a href="index.html">runit</a> package does not care about utmp records
 for getties. You should choose a getty that handles its own utmp and wtmp
 records. Debian's <tt>mingetty</tt> does create his own utmp record.
+<p>
+<h3>An <tt>agetty</tt> run script</h3>
+(<i>Slackware Linux 9.0</i>)
+<pre>
+ #!/bin/sh
+ exec /sbin/agetty 38400 tty1 linux
+</pre>
 <hr>
 <h3><a name="identd">An <tt>oidentd</tt> run script</a></h3>
 (<i>Linux</i>, oidentd version 2.0.4, needs patch to add the -n flag)
@@ -329,6 +351,17 @@ to be set up.
  exec 2>&1
  exec /usr/sbin/pure-ftpd -a 50 -E -l pam -u 100
 </pre>
+<hr>
+<h3><a name="radiusd">A <tt>radiusd</tt> run script</a></h3>
+(<i>Slackware Linux 9.0</i>, cistron radius 1.6.1)
+<pre>
+ #!/bin/sh
+ exec 2>&1
+ exec radiusd -f -y -z -lstdout
+</pre>
+This service needs a
+<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+to be set up.
 <hr>
 <h3><a name="rsyncd">A <tt>rsyncd</tt> run script</a></h3>
 (<i>SunOS</i>)
@@ -455,6 +488,18 @@ to be set up.
  setuidgid apache \
  /pack/tomcat/current/bin/catalina.sh run
 </pre>
+<hr>
+<h3><a name="wvdial">A <tt>wvdial</tt> run script</a></h3>
+(<i>Slackware Linux 9.0</i>, the service should have a <tt>down</tt>
+file, use <tt>svc -o /service/wvdial</tt> to bring up a ppp connection)
+<pre>
+ #!/bin/sh
+ exec 2>&1
+ exec wvdial ISP
+</pre>
+This service needs a
+<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+to be set up.
 <hr>
 <h3><a name="xdm">A <tt>xdm</tt> run script</a></h3>
 (<i>Linux</i>)
