@@ -2,8 +2,9 @@ runit (0.9.0-1) unstable; urgency=low
 
   * new upstream version.
   * debian/rules: minor cleanup.
+  * debian/control: Standards-Version: 3.5.9.
 
- -- Gerrit Pape <pape@smarden.org>  Thu, 24 Apr 2003 15:58:34 +0200
+ -- Gerrit Pape <pape@smarden.org>  Fri, 25 Apr 2003 09:22:27 +0200
 
 runit (0.8.4-1) unstable; urgency=low
 
